Fix img ref, cropped svgs, and site desc

--- a/css/site.css
+++ b/css/site.css
@@ -412,6 +412,7 @@ h1 {
     display: block;
     width: 3em;
     height: 3em;
+    padding: 0 1px;
     fill: rgba(255, 255, 255, 0.8);
     filter: drop-shadow(0px 0px 0.5em rgba(0, 0, 0, 0.2));
     transition: 0.2s fill cubic-bezier(0.65, 0.05, 0.36, 1);
